--- a/homework-15-3.css
+++ b/homework-15-3.css
@@ -20,17 +20,6 @@ aside {
   display: inline-block;
   float: left;
 }
-/* .sp{
-    padding: 0px;
-}
-span {
-  display: inline-block;
-  margin-top: 42px;
-  font-size: 25px;
-  color: black;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-} */
 li {
   list-style: none;
   font-size: 15px;
@@ -89,6 +78,7 @@ li:hover {
   margin-bottom: 80px;
   background-color: rgb(228, 227, 224);
   border-radius: 10px;
+  padding-bottom: 2rem;
   /* box-shadow: 10px 10px 10px rgba(rgb(59, 55, 55), rgb(22, 22, 22), rgb(45, 45, 45), alpha); */
   box-shadow: 4px 4px  6px rgb(83, 83, 83);
 }
@@ -129,10 +119,6 @@ li:hover {
   /* margin-top: 13px;
   margin-left: 30px; */
 }
-/* td{
-    text-align: center;
-    vertical-align: t;
-} */
 tr,
 td,
 th {
