--- a/homework-15-3.css
+++ b/homework-15-3.css
@@ -10,7 +10,6 @@ aside {
   border-radius: 10px 0px 0px 10px;
   display: inline-block;
   float: left;
-
 }
 
 .pro {
@@ -81,7 +80,7 @@ li:hover {
   border-radius: 10px;
   padding-bottom: 2rem;
   /* box-shadow: 10px 10px 10px rgba(rgb(59, 55, 55), rgb(22, 22, 22), rgb(45, 45, 45), alpha); */
-  box-shadow: 4px 4px  6px rgb(83, 83, 83);
+  box-shadow: 4px 4px 6px rgb(83, 83, 83);
 }
 .pro-1 {
   width: 40px;
@@ -124,6 +123,7 @@ tr,
 td,
 th {
   padding: 20px 37px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .bit {
   display: inline-block;
@@ -153,11 +153,11 @@ th {
   border: none;
 }
 .button-2 {
-    padding: 3px 35px;
-    border-radius: 4px;
-    background-color: #edda8da8;
-    border: none;
-  }
+  padding: 3px 35px;
+  border-radius: 4px;
+  background-color: #edda8da8;
+  border: none;
+}
 .div-in {
   display: inline-block;
 }
