--- a/homework-15-3.css
+++ b/homework-15-3.css
@@ -129,6 +129,7 @@ th {
   display: inline-block;
   margin-bottom: 0px;
   margin-top: 30px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .bit2 {
   margin: 0px;
