--- a/homework-15-3.css
+++ b/homework-15-3.css
@@ -70,6 +70,7 @@ li:hover {
 }
 .design {
   font-size: 12px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 #section-1 {
   margin: auto;
